# m3x

./: CMakeLists.txt  main.cpp
arduino/m3xBLE/: m3xBLE.ino
haptics/: libm3x.py  test.py
include/SimpleBLE-main/simpleble/: CMakeLists.txt
m3xPythonLibrary/: libm3x.py  test.py
